@@ -1,10 +1,13 @@
 import itertools
 
+from Acquisition.interfaces import IAcquirer
 from zope.interface import implements
 from zope.component import getMultiAdapter
 
 from zope.schema.interfaces import IContextSourceBinder
 from zope.schema.vocabulary import SimpleTerm
+
+from zope.app.component.hooks import getSite
 
 from plone.app.layout.navigation.interfaces import INavigationQueryBuilder
 from plone.app.vocabularies.catalog import parse_query
@@ -166,8 +169,12 @@ class PathSourceBinder(object):
         self.navigation_tree_query = navigation_tree_query
 
     def __call__(self, context):
+        content = context
+
+        if not IAcquirer.providedBy(content):
+            content = getSite()
         return self.path_source(
-            context,
+            content,
             selectable_filter=self.selectable_filter,
             navigation_tree_query=self.navigation_tree_query)
 
